--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,3 +43,4 @@ jobs:
       # Run linkcheck, propagate linkcheck failure through grep pipe
       - name: Linkcheck
         run: set -o pipefail; npm run linkcheck 2>/dev/null | grep "Getting links from\|BROKEN"
+        continue-on-error: true
