--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vuepress/plugin-blog": "1.9.4",
     "@vuepress/plugin-medium-zoom": "1.8.2",
     "broken-link-checker": "0.7.8",
+    "markdown-it-footnote": "3.0.3",
     "markdown-it-implicit-figures": "0.10.0",
     "serve": "12.0.0",
     "start-server-and-test": "1.13.1",
