--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-  "name": "ldk-docs",
-  "version": "0.0.0",
-  "private": true,
+  "name": "lightningdevkit.org",
+  "version": "1.0.0",
+  "description": "Lightning Dev Kit Documentation",
+  "author": "Lightning Dev Kit",
+  "license": "MIT",
+  "bugs": "https://github.com/lightningdevkit/lightningdevkit.org/issues",
+  "homepage": "https://lightningdevkit.org",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lightningdevkit/lightningdevkit.org.git"
+  },
+  "keywords": [
+    "bitcoin",
+    "lightning",
+    "ldk",
+    "documentation"
+  ],
+  "config": {
+    "dist": "docs/.vuepress/dist",
+    "port": "8080",
+    "linkcheck": "blc -ro --filter-level 2 --requests 1 --exclude edit/master --exclude issues/new"
+  },
   "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "serve": "docusaurus serve",
-    "clear": "docusaurus clear"
+    "prestart": "rm -rf $npm_package_config_dist",
+    "start": "NODE_ENV=development vuepress dev docs -p $npm_package_config_port",
+    "build": "NODE_ENV=production vuepress build docs",
+    "linkcheck": "start-server-and-test linkcheck:serve $npm_package_config_port linkcheck:local",
+    "linkcheck:serve": "serve -p $npm_package_config_port $npm_package_config_dist",
+    "linkcheck:local": "$npm_package_config_linkcheck http://localhost:$npm_package_config_port"
   },
-  "dependencies": {
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
-    "@mdx-js/react": "^1.6.21",
-    "clsx": "^1.1.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "broken-link-checker": "0.7.8",
+    "serve": "12.0.1",
+    "squarecrypto-vuepress-devkit-theme": "0.1.11",
+    "start-server-and-test": "1.14.0",
+    "vuepress": "1.8.2"
   }
 }
