--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "devDependencies": {
     "broken-link-checker": "0.7.8",
-    "serve": "12.0.1",
-    "squarecrypto-vuepress-devkit-theme": "0.2.0",
+    "serve": "13.0.4",
+    "squarecrypto-vuepress-devkit-theme": "0.4.0",
     "start-server-and-test": "1.14.0",
-    "vuepress": "1.8.2"
+    "vue-server-renderer": "2.6.14",
+    "vue-template-compiler": "2.6.14",
+    "vuepress": "1.9.7"
   }
 }
