--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "broken-link-checker": "0.7.8",
     "serve": "14.0.1",
-    "squarecrypto-vuepress-devkit-theme": "0.4.4",
+    "squarecrypto-vuepress-devkit-theme": "^0.4.5",
     "start-server-and-test": "1.14.0",
     "vuepress": "1.9.7"
   }
