--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "linkcheck:local": "$npm_package_config_linkcheck http://localhost:$npm_package_config_port"
   },
   "devDependencies": {
+    "@spiralbtc/vuepress-devkit-theme": "^0.4.8",
     "broken-link-checker": "0.7.8",
     "serve": "14.0.1",
-    "squarecrypto-vuepress-devkit-theme": "^0.4.7",
     "start-server-and-test": "1.14.0",
     "vuepress": "1.9.7"
   }
