--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,19 +12,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16]
-
     steps:
-      # Checkout doc repo and its dependencies
+      # Checkout and setup
       - name: Checkout
-        uses: actions/checkout@v2
-      # Setup Node
-      - name: Setup (Node.js ${{ matrix.node-version }})
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v3
+      - name: Setup
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
       # Install and build
       - name: Install
         run: npm ci
