--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "devDependencies": {
     "@spiralbtc/vuepress-devkit-theme": "^0.5.0",
     "broken-link-checker": "0.7.8",
-    "serve": "14.0.1",
-    "start-server-and-test": "1.14.0",
-    "vuepress": "1.9.7"
+    "serve": "14.2.0",
+    "start-server-and-test": "2.0.0",
+    "vue": "2.7.14",
+    "vue-server-renderer": "2.7.14",
+    "vuepress": "1.9.9"
   }
 }
